--- a/TM/styles.css
+++ b/TM/styles.css
@@ -151,11 +151,10 @@ body {
     font-size: 18px;
     font-family: Arial, sans-serif;
   }
-  
-  #current-finished, #current-marks, #attempts, #marks {
-    font-size: 24px;
-    font-weight: bold;
-    font-family: Arial, sans-serif;
+
+  .scores {
+    display: flex;
+    justify-content: center;
   }
 
   .mcq-choice {
